maps view tweaks

--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -56,7 +56,7 @@
 		
 		<div class="support-box-wrap">
 			<h1>Location</h1>
-			<map zoom="12" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
+			<map zoom="12" center="false" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
 
 			</map>
 		</div>
