--- a/include/views/default/cockpit2/frontend/orders/orders-order.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-order.phtml
@@ -37,7 +37,7 @@
 						<div class="field-row" ng-if="order.status.status != 'delivered'">
 							<div class="field-key">ETA</div>
 							<div class="field-value">
-								{{eta.total.duration + 15 | formatPrice}} minutes
+								{{eta.time | formatPrice}} minutes
 							</div>
 						</div>
 					</div>
@@ -60,10 +60,6 @@
 							<div class="field-key">Address</div>
 							<div class="field-value"><a href ng-click="routeAddress(order.user.address)">{{order.user.address}}</a></div>
 						</div>
-						<div class="field-row">
-							<div class="field-key">Distance from restaurant</div>
-							<div class="field-value">@todo</div>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -84,10 +80,6 @@
 						<div class="field-row">
 							<div class="field-key">Address</div>
 							<div class="field-value"><a href ng-click="routeAddress(order.restaurant.address)">{{order.restaurant.address}}</a></div>
-						</div>
-						<div class="field-row">
-							<div class="field-key">Distance from customer</div>
-							<div class="field-value">@todo</div>
 						</div>
 					</div>
 				</div>
@@ -128,22 +120,10 @@
 								<span ng-if="!order.driver.working">Shift ended</span>
 							</div>
 						</div>
-						<div class="field-row" ng-if="order.status.status == 'accepted'">
-							<div class="field-key">Restaurant Dis</div>
+						<div class="field-row" ng-if="order.status.status == 'accepted' || order.status.status == 'pickedup'">
+							<div class="field-key">Distance</div>
 							<div class="field-value">
-								{{eta.restaurant.duration | formatPrice}} minutes / {{eta.restaurant.distance | formatPrice}} miles
-							</div>
-						</div>
-						<div class="field-row" ng-if="order.status.status != 'delivered'">
-							<div class="field-key">Customer Dis</div>
-							<div class="field-value">
-								{{eta.customer.duration | formatPrice}} minutes / {{eta.customer.distance | formatPrice}} miles
-							</div>
-						</div>
-						<div class="field-row" ng-if="order.status.status == 'accepted'">
-							<div class="field-key">Total Dis</div>
-							<div class="field-value">
-								{{eta.total.duration | formatPrice}} minutes / {{eta.total.distance | formatPrice}} miles
+								{{eta.distance | formatPrice}} miles
 							</div>
 						</div>
 					</div>
