--- a/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
@@ -19,7 +19,7 @@
 			
 			<tr>
 				<th>Admin</th>
-				<td><a href="/staff/info/{{version.id_admin}}">{{version.admin.name}}</a></td>
+				<td><a href="/staff/{{version.id_admin}}">{{version.admin.name}}</a></td>
 			</tr>
 			
 			
