--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -1,79 +1,75 @@
 <div class="top-pad"></div>
 
-<div class="content-padding" ng-show="ready">
+<div class="content-padding content-padding-notop">
 
-	<div class="dialog-message dialog-message-error" style="font-size: 1.4em;">
-			<b>In order to get paid</b></br> <span style="font-size: .8em; letter-spacing: 0px;">you must upload everything, especially Payment Information!</span>
-	</div>
+	<div ng-show="ready">
+		
+		<div class="dialog-message dialog-message-nice">
+			<b>In order to get paid, please:</b>
+			<div class="docs-list-spacer"></div>
+			<div class="dialog-subtext">
+				<i class="fa fa-check-circle" ng-class="{'documents-check-bad': !status.docs, 'documents-check-green': status.docs}"></i>&nbsp;&nbsp;Sign and upload all documents<br>	
+				<i class="fa fa-check-circle" ng-class="{'documents-check-bad': !status.identification, 'documents-check-green': status.identification}"></i>&nbsp;&nbsp;Upload identification cards<br>
+				<i class="fa fa-check-circle" ng-class="{'documents-check-bad': !status.paymentinfo, 'documents-check-green': status.paymentinfo}"></i>&nbsp;&nbsp;Fill out your payment information.
 
-	<div class="dialog-message dialog-message-error" style="font-size: 1.3em; letter-spacing: 0px;">
-			Please upload your docs by visiting <span class="link">http://cockpit.la</span> from a desktop computer using Chrome as your browser!
-	</div>
-
-	<h1 class="title left"  style="font-size: 2.7em; margin-bottom: .2em;"><i class="fa fa-briefcase" style="vertical-align: baseline;"></i><span>Documents</span></h1>
-
-	<div class="divider"></div>
-
-	<h2 class="payment-info-text" ng-click="pay_info()"><span class="link orange">Enter Payment Info</span></h2>
-
-	<div class="divider"></div>
-
-	<h2 class="title driver-docs-text">
-		Please download the docs, fill them out and then upload them back to this page. We recommend signing them with <a href="https://www.hellosign.com/" target="_system">Hellosign</a>.
-	</h2>
-
-	<table class="tb-grid driver-docs-grid">
-		<tbody>
+			</div>
+				<span ng-if="status.docs && status.identification && status.paymentinfo"><br>You're all set!</span>			
+		</div>
+		<br>
+		
+		<h1 class="title"><i class="fa fa-briefcase"></i>Documents</h1>
+	
+		<h2 class="title driver-docs-text">
+			To complete the documents section, please visit <a href="https://cockpit.la" target="_system">https://cockpit.la</a> from a computer using Chrome as your browser. Download the docs, fill them out and then upload them back to this page. We recommend signing them with <a href="https://www.hellosign.com/" target="_system">Hellosign</a>.
+		</h2>
+	
+		<table class="tb-grid driver-docs-grid">
 			<tr ng-repeat="doc in documents" ng-if="doc.url">
+				<td class="documents-check ">
+					<i class="fa fa-check-circle documents-check-good" ng-show="doc.status && doc.status.file.substring(9, 14) !== 'blank'"></i>
+					<i class="fa fa-check-circle documents-check-bad" ng-show="!doc.status || doc.status.file.substring(9, 14) == 'blank'"></i>
+				</td>
 				<td ng-click="edit(driver.id_admin)" class="td-medium driver-docs-name">
 					<h2 class="driver-docs-name"><b>{{doc.name}}</b></h2>
 					<a class="docs-download-form" href="{{doc.url}}" target="_blank"><b>Download Form</b></a>
 					<!-- if he already have this doc, show the download link -->
-					<span ng-show="doc.status && doc.status.file.substring(9, 14) !== 'blank'" title="Sent at {{doc.status.date_formated}}">
+					<span ng-show="1==2 && doc.status && doc.status.file.substring(9, 14) !== 'blank'" title="Sent at {{doc.status.date_formated}}">
 						<a class="docs-download" href="{{doc.status.url}}" target="_blank">Download Doc</a>
 					</span>
 				</td>
-				<td class="td-medium td-download" style="vertical-align: top;">
+				<td class="td-download">
 					<!-- upload directive -->
 					<div class="upbutton"><div driver-docs-upload="{{doc.id_driver_document}}"></div></div>
 				</td>
 			</tr>
-
-			<!-- Payment info -->
-			<tr>
-				<td class="td-medium driver-docs-name">
-					<h2 class="driver-docs-name"><b>Payment information</b> - don't forget this!</h2>
-				</td>
-				<td align="right">
-					<div>
-						<button ng-click="pay_info()" class="ladda-button upload" data-color="mint" data-style="zoom-in" data-size="l"><span class="ladda-label"><b>Click here and then click Save</b></span></button>
-					</div>
-				</td>
-			</tr>
-
-		</tbody>
-	</table>
-
-	<h2 class="title driver-docs-text">
-		Below upload a clear picture of your Drivers License and Insurance card. You can do this right from your smartphone in some web browsers if you've take the photo in your camera app before you press Upload below. If that doesn't work, use Chrome on your computer <i class="fa fa-smile-o"></i>
-	</h2>
-
-	<table class="tb-grid driver-docs-grid">
-		<tbody>
+		</table>
+		
+		<h1 class="title" ><i class="fa fa-picture-o"></i><span>Identification</span></h1>
+	
+		<h2 class="title driver-docs-text">
+			Upload a clear picture of your Drivers License and Insurance card. You can do this from most smartphones if you have already taken a picture. If that doesn't work, please use Chrome on your computer.
+		</h2>
+	
+		<table class="tb-grid driver-docs-grid">
 			<tr ng-repeat="doc in documents" ng-if="!doc.url">
+				<td class="documents-check">
+					<i class="fa fa-check-circle documents-check-good" ng-show="doc.status"></i>
+					<i class="fa fa-check-circle documents-check-bad" ng-show="!doc.status"></i>
+				</td>
 				<td class="td-medium driver-docs-card" ng-click="edit(driver.id_admin)">
 					<h2 class="driver-docs-card driver-docs-name"><b>{{doc.name}}</b></h2>
 					<span ng-show="doc.status" title="Sent at {{doc.status.date_formated}}"><a class="docs-download-card" href="{{doc.status.url}}" target="_blank"><b>Download Doc</b></a></span>
 				</td>
 				<td class="td-medium td-download">
-
 					<div class="upbutton"><div driver-docs-upload="{{doc.id_driver_document}}"></div></div>
 				</td>
 			</tr>
-		</tbody>
-	</table>
-</div>
-
-
-<spinner-loading></spinner-loading>
-<hack-expand-content></hack-expand-content>
+		</table>
+		
+			
+		<h1 class="title" ><i class="fa fa-bank"></i><span>Payment Information</span></h1>
+		<h2 class="title driver-docs-text">
+			To complete your onboarding, please enter your <a href="/drivers/docs/payment">payment information</a>.
+		</h2>
+		
+	</div>
