some css tweaks

--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment-info-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment-info-form.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding" ng-show="ready">
 
-	<h1 class="title left"><i class="fa fa-briefcase"></i><span>Payment Information</span></h1>
+	<h1 class="title left"><i class="fa fa-bank"></i><span>Payment Information</span></h1>
 
 	<div class="divider"></div>
 
