--- a/include/views/default/cockpit/charts/column.phtml
+++ b/include/views/default/cockpit/charts/column.phtml
@@ -1,5 +1,6 @@
-<?php 
+<?php
 $isPopup = ( $_GET[ 'popup' ] ? true : false );
+$hideSlider = ( $_REQUEST[ 'hideSlider' ] ? true : false );
 if( $isPopup ){
 ?>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800">
@@ -8,6 +9,8 @@ if( $isPopup ){
 	<script src="/assets/js/highcharts.src.js" type="text/javascript"></script>
 <?
 }
+
+
 	// group up the data by order of data items recieved
 	// 0: X
 	// 1: Y
@@ -16,7 +19,7 @@ if( $isPopup ){
 	$categories = [];
 	$ys = [];
 	$group = [];
-	
+
 	// set up x labels and empty objects
 	foreach ($data as $item) {
 		$vars = get_object_vars($item);
@@ -31,11 +34,11 @@ if( $isPopup ){
 		$y = array_shift($vars);
 
 		$group = array_shift($vars);
-		
+
 		$ys[$group] = [];
 
 	}
-	
+
 	$hasResults = true;
 
 	if( count( $xs ) == 0 ){
@@ -48,7 +51,7 @@ if( $isPopup ){
 			$xx .= "'".str_replace("'","\\'",$k)."', ";
 		}
 		$xx = substr($xx,0,-2);
-		
+
 		// fill empty columns
 		foreach ($xs as $k => $v) {
 			foreach ($ys as $kk => $vv) {
@@ -60,21 +63,21 @@ if( $isPopup ){
 		// gather data
 		foreach ($data as $item) {
 			$vars = get_object_vars($item);
-			
+
 			// X
 			$x = array_shift($vars);
 			$xs[$x] = true;
 
 			// Y & group
 			$y = array_shift($vars);
-			
+
 			$groupName = key($vars);
 			$group = array_shift($vars);
-			
+
 			$ys[$group][$x] = $y;
 
 		}
-		
+
 		$applyCommunityFilter = false;
 
 		foreach ($ys as $k => $v) {
@@ -82,8 +85,8 @@ if( $isPopup ){
 				if( $_GET[ 'community' ] && $_GET[ 'community' ] != '' && strtolower( $_GET[ 'community' ] ) != 'all' ){
 					if( strtolower( $_GET[ 'community' ] ) == strtolower( $k ) ){
 						$applyCommunityFilter = true;
-					} 
-				} 
+					}
+				}
 			}
 		}
 
@@ -98,7 +101,7 @@ if( $isPopup ){
 					} else {
 						$visible = false;
 					}
-				} 
+				}
 			}
 			$ys[$k] = [
 				'name' => $k,
@@ -107,7 +110,7 @@ if( $isPopup ){
 			];
 		}
 
-		
+
 		$jsData = [
 			'xs' => array_keys($xs),
 			'ys' => array_values($ys)
@@ -126,7 +129,7 @@ if( $isPopup ){
 					$url = "http://$_SERVER[HTTP_HOST]$_SERVER[REQUEST_URI]&popup=1";
 					echo '&nbsp;&nbsp;<a href="' . $url . '" target="_blank" title="Zoom this chart"><i class="icon-zoom-in"></i></a>';
 					}?>
-			</h4>	
+			</h4>
 		</div>
 	</div>
 	<?php if( $hasResults ){ ?>
@@ -140,21 +143,21 @@ if( $isPopup ){
 	<div id="options-<?=$divId?>" style="height:110px;background:#F5F5F5;overflow-x:auto;width:99%;overflow-y:hidden;<?php if( $isPopup || $interval == 'hour' ){ echo 'display:none'; } ?>">
 		<table>
 			<tr>
-			<?php 
+			<?php
 				if( $groups ){ ?>
 				<td class="padded" nowrap="">
 					<select style="width:100px;font-size:10px;" class="charts-select" id="select-<?=$chartId?>" data-divId="<?php echo $divId; ?>" onchange="loadSubChart( this.id )">
-						<?php foreach ( $groups as $key => $value ) { 
+						<?php foreach ( $groups as $key => $value ) {
 							$selected = ( $key == $chartId ) ? 'selected="selected"' : '';
 							?>
 							<option <?php echo $selected; ?> value="<?php echo $key; ?>|<?php echo $value[ 'interval' ]; ?>"><?php echo $value[ 'title' ]; ?></option>
 						<?php } ?>
 					</select>
 				</td>
-			<?php } 
+			<?php }
 
 			if( $info['chart'][ 'filters' ] ){
-				
+
 				$filters = $info['chart'][ 'filters' ];
 
 				$hasFilter = false;
@@ -168,20 +171,20 @@ if( $isPopup ){
 						if( count( $cohorts[ 'cohorts' ] ) > 0 ){
 
 							foreach( $cohorts[ 'cohorts' ] as $cohort ){
-								
+
 								$checked = ( $_GET[ 'id_chart_cohort' ] == $cohort->id_chart_cohort && $_GET[ 'cohort_type' ] == 'cohort' ) ? 'checked="checked"' : '';
-								
+
 								if( $checked != '' ){ $hasFilter = true; }
-								
+
 								?>
-								
+
 								<td nowrap="" class="padded" id="filter-<?php echo $divId; ?>-cohort-<?php echo $cohort->id_chart_cohort; ?>">
 									<div>
 										<input type="radio" name="filter<?=$chartId?>" class="icheck-<?=$chartId?>" <?php echo $checked; ?> value="cohort&cohort_type=cohort&id_chart_cohort=<?php echo $cohort->id_chart_cohort; ?>" id="cohort-<?php echo $cohort->id_chart_cohort; ?>">
 										<label for="cohort-<?php echo $cohort->id_chart_cohort; ?>" style="font-size:10px;"><?php echo $cohort->name; ?></label>
 									</div>
 								</td>
-								
+
 								<?php
 							}
 						}
@@ -192,7 +195,7 @@ if( $isPopup ){
 								<div>
 									<select id="cohort-giftcards" style="width:100px;font-size:10px;" class="charts-select select-cohort-<?=$chartId?>">
 									<option>Gift card group</option>
-									<?php foreach( $cohorts[ 'giftcards' ] as $cohort ){ 
+									<?php foreach( $cohorts[ 'giftcards' ] as $cohort ){
 											$selected = ( $_GET[ 'id_chart_cohort' ] == $cohort->id_chart_cohort && $_GET[ 'cohort_type' ] == 'giftcard' ) ? 'selected="selected"' : '';
 											if( $selected != '' ){ $hasFilter = true; }
 										?>
@@ -201,7 +204,7 @@ if( $isPopup ){
 									</select>
 								</div>
 							</td>
-							
+
 							<?php
 						}
 
@@ -211,7 +214,7 @@ if( $isPopup ){
 								<div>
 									<select id="cohort-months" style="width:100px;font-size:10px;" class="charts-select select-cohort-<?=$chartId?>">
 									<option>First order at</option>
-									<?php foreach( $cohorts[ 'months' ] as $cohort ){ 
+									<?php foreach( $cohorts[ 'months' ] as $cohort ){
 											$selected = ( $_GET[ 'id_chart_cohort' ] == $cohort->id_chart_cohort && $_GET[ 'cohort_type' ] == 'months' ) ? 'selected="selected"' : '';
 											if( $selected != '' ){ $hasFilter = true; }
 										?>
@@ -220,7 +223,7 @@ if( $isPopup ){
 									</select>
 								</div>
 							</td>
-							
+
 							<?php
 						}
 
@@ -249,8 +252,8 @@ if( $isPopup ){
 			?>
 			</tr>
 		</table>
-	
-	<div class="row-fluid span11"  style="padding:0 20px; font-size:10px;">
+
+	<div class="row-fluid span11"  style="padding:0 20px; font-size:10px;<?php if( $hideSlider ){ echo 'display:none;'; } ?>">
 		<div class="span4" id="week-<?=$chartId?>">
 			<?php
 			if( $interval == 'week' ){
@@ -264,13 +267,13 @@ if( $isPopup ){
 					$_slider_from = $from_month;
 			?>
 				Months <?php echo $from_month; ?> to <?php echo $to_month; ?> (total <?php echo $totalMonths; ?>)
-			<?php 
+			<?php
 			} else if( $interval == 'day' ){
 					$_slider_to = $to_day;
 					$_slider_from = $from_day;
 			?>
 				Days <?php echo $from_day; ?> to <?php echo $to_day; ?> (total <?php echo $totalDays; ?>)
-			<?php 
+			<?php
 			} ?>
 		</div>
 		<div class="span6">
@@ -374,12 +377,12 @@ $(function () {
 		?>
 			values: [ <?php echo $from_month; ?>, <?php echo $to_month; ?> ],
 			max: <?php echo $totalMonths; ?>,
-		<?php 
+		<?php
 		} else if( $interval == 'day' ){
 		?>
 			values: [ <?php echo $from_day; ?>, <?php echo $to_day; ?> ],
 			max: <?php echo $totalDays; ?>,
-		<?php 
+		<?php
 		} ?>
 		change: function( event, ui ) {
 			$( '#week-<?=$chartId?>' ).html( '<i class="icon-spinner icon-spin"></i>' );
@@ -414,7 +417,7 @@ $(function () {
 		});
 
 		$( '.select-cohort-<?=$chartId?>' ).change( function(){
-			
+
 			var select = $( this );
 
 			var id = select.attr( 'id' );
