added a more noticable loading indicator for list views

--- a/include/views/default/cockpit2/frontend/customers/customers.phtml
+++ b/include/views/default/cockpit2/frontend/customers/customers.phtml
@@ -10,6 +10,8 @@
 			</tr>
 		</table>
 	</div>
+	
+	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
