--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-list.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-list.phtml
@@ -11,6 +11,7 @@
 			</tr>
 		</table>
 	</div>
+	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 
 	<h2>
 		<a href="/drivers/onboarding/docs">Documents</a> | 
