--- a/include/views/default/cockpit2/frontend/orders/orders.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders.phtml
@@ -10,7 +10,9 @@
 		</table>
 	</div>
 
-	<div class="box-content2 box-content-table">
+	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
+
+	<div class="box-content2 box-content-table" id="masked">
 		<table class="tb-zebra">
 			<tr>
 				<th>Info</th>
