--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payments.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payments.phtml
@@ -22,6 +22,7 @@
 			</tr>
 		</table>
 	</div>
+	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 
 
 	<div ng-if="count">
