--- a/include/views/default/cockpit2/layout/html.phtml
+++ b/include/views/default/cockpit2/layout/html.phtml
@@ -1,7 +1,7 @@
 <?=$this->display('layout/html.top')?>
 
 <? if (c::config()->bundle) : ?>
-	<script src="/assets/js/bundle.js?v=<?=Cana_Util::gitVersion()?>&s=cockpit"></script>
+	<script src="/assets/cockpit/js/bundle.js?v=<?=Cana_Util::gitVersion()?>&s=cockpit"></script>
 <? else : ?>
 	<?=$this->display('bundle/js', ['set' => ['scripts' => ['cockpit']]])?>
 <? endif ; ?>
