--- a/include/views/default/cockpit2/layout/html.top.phtml
+++ b/include/views/default/cockpit2/layout/html.top.phtml
@@ -18,7 +18,7 @@
 <?=$this->display('layout/html.servertime')?>
 
 <? if (c::config()->bundle) : ?>
-	<link rel="stylesheet" type="text/css" href="/assets/css/bundle.css?v=<?=Cana_Util::gitVersion()?>">
+	<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/bundle.css?v=<?=Cana_Util::gitVersion()?>">
 <? else : ?>
 	<?=$this->display('bundle/css')?>
 <? endif ; ?>
