--- a/include/views/default/cockpit2/frontend/customers/customers.phtml
+++ b/include/views/default/cockpit2/frontend/customers/customers.phtml
@@ -25,7 +25,7 @@
 				<th>Last&nbsp;Order</th>
 			</tr>
 			<tr ng-repeat="customer in customers">
-				<td><a href="/customer/{{customer.id_user}}">
+				<td class="tb-image-row"><a href="/customer/{{customer.id_user}}">
 					<div class="customer-image-crop">
 						<img ng-if="customer.image" class="customer-image" src="{{customer.image}}"></img>
 						<div ng-if="!customer.image" class="customer-image customer-image-null"></div>
